--- a/backend/Dockerfile.cloud
+++ b/backend/Dockerfile.cloud
@@ -1,22 +1,21 @@
-# Backend Dockerfile (Node.js)
+# Backend Dockerfile for Cloud Deployment (builds from root)
 FROM node:18-alpine
 
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY backend/package*.json ./
 
 # Install dependencies
 RUN npm install --production
 
 # Copy application files
-COPY server.js .
-COPY models/ ./models/
-COPY routes/ ./routes/
+COPY backend/server.js .
+COPY backend/models/ ./models/
+COPY backend/routes/ ./routes/
 
-# Note: For cloud deployment, use Dockerfile.cloud which builds from root directory
-# This local Dockerfile expects data to be mounted as a volume
-RUN mkdir -p /app/../data
+# Copy data directory (from root context)
+COPY data /app/../data
 
 # Expose port
 EXPOSE 5000
@@ -27,4 +26,3 @@ HEALTHCHECK --interval=10s --timeout=5s --start-period=30s --retries=3 \
 
 # Start server
 CMD ["node", "server.js"]
-
