--- a/backend/Dockerfile.ml.cloud
+++ b/backend/Dockerfile.ml.cloud
@@ -25,4 +25,4 @@ HEALTHCHECK --interval=10s --timeout=5s --start-period=30s --retries=3 \
 
 # Start ML service (Railway uses $PORT env var)
 # Use shell form to allow $PORT variable expansion
-CMD ["sh", "-c", "uvicorn ml_service:app --host 0.0.0.0 --port ${PORT:-8000}"]
+CMD sh -c "uvicorn ml_service:app --host 0.0.0.0 --port ${PORT:-8000}"
