--- a/backend/Dockerfile.ml.cloud
+++ b/backend/Dockerfile.ml.cloud
@@ -12,6 +12,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application files
 COPY backend/ml_service.py .
 COPY backend/complex_price_model_v2.pkl .
+COPY backend/start_ml_service.sh .
+
+# Make startup script executable
+RUN chmod +x start_ml_service.sh
 
 # Verify model file exists
 RUN ls -la complex_price_model_v2.pkl || echo "Warning: Model file not found"
@@ -19,10 +23,9 @@ RUN ls -la complex_price_model_v2.pkl || echo "Warning: Model file not found"
 # Expose port
 EXPOSE 8000
 
-# Health check
+# Health check (will use PORT env var at runtime)
 HEALTHCHECK --interval=10s --timeout=5s --start-period=30s --retries=3 \
-  CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" || exit 1
+  CMD sh -c "python -c \"import urllib.request, os; port = os.environ.get('PORT', '8000'); urllib.request.urlopen(f'http://localhost:{port}/health')\"" || exit 1
 
-# Start ML service (Railway uses $PORT env var)
-# Use shell form to allow $PORT variable expansion
-CMD sh -c "uvicorn ml_service:app --host 0.0.0.0 --port ${PORT:-8000}"
+# Start ML service using startup script
+CMD ["./start_ml_service.sh"]
